# laboratorio_2_iot_

./: README.md
Laboratorio_2a/: .gitignore  CMakeLists.txt  sdkconfig
Laboratorio_2a/components/espressif__touch_element/: .component_hash  idf_component.yml  touch_button.c
Laboratorio_2a/components/rgb_led/: CmakeLists.txt
Laboratorio_2a/components/rgb_led/led_strip/: CMakeLists.txt
Laboratorio_2a/components/rgb_led/led_strip/src/: led_strip_rmt_ws2812.c
Laboratorio_2a/components/touchpad/: CMakeLists.txt  touchpad.c
Laboratorio_2a/main/: CMakeLists.txt  idf_component.yml  main.c
Laboratorio_2b/: CMakeLists.txt  README.md
Laboratorio_2b/.cache/clangd/index/: softap_sta.c.734B862678052594.idx
Laboratorio_2b/components/espressif__touch_element/: touch_element.c
Laboratorio_2b/components/rgb_led/: rgb_led.c
Laboratorio_2b/components/rgb_led/led_strip/include/: led_strip.h
Laboratorio_2b/components/touchpad/: touchpad.c
Laboratorio_2b/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  softap_sta.c
Laboratorio_2b/main/web/: index.html
components/delay/: delay.c
components/delay/include/: delay.h
components/rgb_led/: CMakeLists.txt
components/rgb_led/include/: rgb_led.h
components/touchpad/include/: touchpad.h
main/: idf_component.yml
main/web/: index.html
